# python-project-template

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
tests/: test_smoke.py
