[project]
name = "PROJECT_NAME"
version = "0.1.0"
description = " "
requires-python = ">=3.11"

# Runtime dependencies stay EMPTY today. We add them with `uv add` the moment
# a phase needs them  so the lockfile history documents when and why each
# dependency entered the project.

dependencies = []

[dependency-groups]
# Dev tools are not runtime deps: the Docker image in Phase 4 must NOT
# contain pytest or ruff. Separating them now is what makes that possible.
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/PROJECT_NAME"]   # tells the build where the package lives (src layout)

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F = pycodestyle+pyflakes basics, I = import sorting (replaces isort),
# B = bugbear (catches real bugs like mutable default args), UP = modernisation.
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
